# AutoValet

./: .gitignore  CMakeLists.txt  README.md  absolute_pos.py  package.xml
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/ball_chaser/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/ball_chaser/include/ball_chaser/: DriveToTarget.h  DriveToTargetRequest.h  DriveToTargetResponse.h
devel/.private/ball_chaser/lib/ball_chaser/: drive_bot  process_image
devel/.private/ball_chaser/lib/pkgconfig/: ball_chaser.pc
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.bash  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/mapping/: .catkin  local_setup.sh
devel/.private/mapping/lib/pkgconfig/: mapping.pc
devel/.private/my_robot/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/my_robot/lib/pkgconfig/: my_robot.pc
devel/.private/teleop_twist_keyboard/: .catkin  .rosinstall  local_setup.sh
devel/.private/teleop_twist_keyboard/lib/pkgconfig/: teleop_twist_keyboard.pc
devel/include/ball_chaser/: DriveToTarget.h  DriveToTargetRequest.h  DriveToTargetResponse.h
devel/lib/ball_chaser/: drive_bot  process_image
devel/lib/pkgconfig/: ball_chaser.pc  catkin_tools_prebuild.pc  mapping.pc  my_robot.pc  teleop_twist_keyboard.pc
devel/lib/python2.7/dist-packages/ball_chaser/: __init__.py
devel/share/ball_chaser/cmake/: ball_chaser-msg-extras.cmake  ball_chaser-msg-paths.cmake  ball_chaserConfig-version.cmake  ball_chaserConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/gennodejs/ros/ball_chaser/: _index.js
devel/share/mapping/cmake/: mappingConfig-version.cmake  mappingConfig.cmake
devel/share/my_robot/cmake/: my_robotConfig-version.cmake  my_robotConfig.cmake
devel/share/roseus/ros/ball_chaser/: manifest.l
devel/share/teleop_twist_keyboard/cmake/: teleop_twist_keyboardConfig-version.cmake  teleop_twist_keyboardConfig.cmake
src/jackal_desktop/jackal_viz/rviz/: gmapping.rviz  robot.rviz
src/lattice_global_planner/: CMakeLists.txt  lattice_global_planner_plugin.xml  package.xml
src/lattice_global_planner/include/lattice_global_planner/: lattice_planner_ros.h  map.yaml  map2.pgm  map2.yaml  params.h  prim_test.mprim  utilfunction.h
src/lattice_global_planner/launch/: parking_test.launch  parking_test_dynamic.launch  parking_test_mapping.launch  parking_test_only_mapping.launch
src/lattice_global_planner/src/: lattice_planner_ros.cpp  lattice_planner_ros.h  params.cpp
src/perception/abspos_rbcar/: CMakeLists.txt  abspos_rbcar.py  package.xml
src/perception/ball_chaser/: CMakeLists.txt  package.xml
src/perception/ball_chaser/launch/: ball_chaser.launch
src/perception/ball_chaser/src/: drive_bot.cpp  process_image.cpp
src/perception/jackal/jackal_description/urdf/: accessories.urdf.xacro  custom_example.urdf  empty.urdf  jackal.urdf.xacro
src/perception/jackal/jackal_navigation/launch/: mygmapping_demo.launch  mygmapping_rbcar_demo.launch  planning_mapping_demo.launch
src/perception/jackal/jackal_navigation/params/: move_base_params.yaml
src/perception/jackal_simulator/jackal_gazebo/launch/: jackal_world.launch  parking_world.launch  parking_world_rb.launch  parking_world_rb_mapping.launch  parking_world_rb_mapping_only.launch
src/perception/mapping/: CMakeLists.txt  package.xml
src/perception/mapping/launch/: mapping.launch
src/perception/mapping/results/: Untitled Document  map.pgm  map.yaml
src/perception/model/Building/: model.sdf
src/perception/model/HumanoidRobot/: model.config  model.sdf
src/perception/model/mod/: model.config  model.sdf
src/perception/model/my_ball/: model.sdf
src/perception/my_robot/launch/: world.launch
src/perception/my_robot/urdf/: my_robot.gazebo  my_robot.xacro  my_robot_final.xacro  my_robot_good.xacro
src/perception/my_robot/worlds/: my_robot.world  soumya.world
src/perception/mygmapping/: CMakeLists.txt
src/perception/mygmapping/src/: main.cpp  myslam_gmapping.cpp
src/planning/: CMakeLists.txt  a.out  dubins.c  dubins.h  map5.txt  params.cpp  params.h  planner.cpp  planner.mexa64  prim_test.mprim  readme.txt  runtest.m  sbpl_prim.mprim  utilfunction.cpp  utilfunction.h
src/planning/motion_prims/: generate_primitives.m  generate_traj.m  genmprim_car.m  prim_test.m  prim_test.mprim  prim_test.m~  save_primitives.m
src/rbcar_common-kinetic-devel/rbcar_description/robots/: rbcar.urdf.xacro
src/rbcar_sim-kinetic-devel/rbcar_gazebo/launch/: rbcar.launch
src/rbcar_sim-kinetic-devel/rbcar_robot_control/src/: rbcar_robot_control.cpp
src/robotnik_purepursuit_planner-master/: README.md
src/robotnik_purepursuit_planner-master/robotnik_pp_msgs/: CMakeLists.txt  package.xml
src/robotnik_purepursuit_planner-master/robotnik_pp_msgs/msg/: ObjectDetected.msg
src/robotnik_purepursuit_planner-master/robotnik_pp_planner/: CMakeLists.txt  README.md  package.xml
src/robotnik_purepursuit_planner-master/robotnik_pp_planner/config/: waypoints.txt
src/robotnik_purepursuit_planner-master/robotnik_pp_planner/launch/: complete.launch  purepursuit.launch  purepursuit_marker.launch
src/robotnik_purepursuit_planner-master/robotnik_pp_planner/src/: purepursuit_planner.cpp
src/robotnik_sensors-kinetic-devel/urdf/: sick_s3000.urdf.xacro
src/teb_local_planner_tutorials/cfg/carlike/: costmap_common_params.yaml  costmap_common_params_dynamic.yaml  global_costmap_params.yaml  global_costmap_params_dynamic.yaml  local_costmap_params.yaml  local_costmap_params_dynamic.yaml  teb_local_planner_params.yaml  teb_local_planner_params_dynamic.yaml
src/teb_local_planner_tutorials/launch/: robot_carlike_in_stage.launch
src/teb_local_planner_tutorials/scripts/: cmd_vel_to_ackermann_drive.py  cmd_vel_to_ackermann_rbcar.py
(+39 files in other folders)
