<?xml version="1.0"?>
<package format="2">
  <name>lattice_global_planner</name>
  <version>0.0.0</version>
  <description>The lattice_global_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lord-pradhan@todo.todo">lord-pradhan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_depend>nav_core</build_depend>
  <exec_depend>nav_core</exec_depend>

  <depend>std_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>nav_core</depend> -->
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

 <!--  <build_depend>nav_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
 -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nav_core plugin="${prefix}/lattice_global_planner_plugin.xml" />
  </export>
</package>
